# PAKT

./: .gitignore  README.md
.github/workflows/: ci.yml
app/desktop_test/: capability.py  chunker.py  config_store.py  diagnostics.py  kiss_bridge.py  main.py  message_tracker.py  pakt_client.py  requirements.txt  telemetry.py  test_app.py  test_capability.py  test_chunker.py  test_kiss_bridge.py  test_messaging.py  test_telemetry_app.py  transport.py
app/ios/: project.yml
app/ios/PAKTiOS/: BLEManager.swift  BLEProtocol.swift  ContentView.swift  Models.swift  PAKTiOSApp.swift
app/ios/PAKTiOS.xcodeproj/: project.pbxproj
app/ios/PAKTiOSTests/: PAKTiOSTests.swift
build_feather_s3/: .bin_timestamp  app-flash_args  flash_project_args  kconfigs.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
build_feather_s3/bootloader/: .bin_timestamp  compile_commands.json  project_description.json
build_feather_s3/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
build_feather_s3/bootloader/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_feather_s3/bootloader/gdbinit/: gdbinit  symbols
build_feather_s3/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_feather_s3/gdbinit/: gdbinit  symbols
build_feather_s3/log/: idf_py_stderr_output_77679  idf_py_stdout_output_77265  idf_py_stdout_output_77679  idf_py_stdout_output_85533
doc/aprs_mvp_docs/: README.md  payload_contracts.md
doc/aprs_mvp_docs/agent_bootstrap/: README.md  agent_context.yaml  architecture_contracts.md  audit.md  execution_playbook.md  gate_pass_matrix.md  handoff_prompt_template.md  implementation_steps_mvp.md  qa_gates.md  step_source_map.md
doc/aprs_mvp_docs/docs/: 01_product_brief.md  02_mvp_scope.md  03_system_architecture.md  04_hardware_block_diagram.md  05_ble_gatt_spec.md  06_firmware_architecture.md  07_audio_i2s_codec_notes.md  08_test_plan.md  09_risks_and_mitigations.md  10_open_questions.md  11_hf_ble_feasibility_study.md  12_implementation_backlog.md  13_quickstart_guide.md  15_interoperability_matrix.md  16_kiss_over_ble_spec.md  17_mvp_gap_analysis.md
doc/aprs_mvp_docs/hardware/: interfaces.md  placeholder_bom.csv
doc/hardware/: README.md
doc/hardware/components/: fetch_pdfs.ps1  sources_manifest.csv
docs/: README.md  bench_bringup_checklist.md  bench_measured_values_template.md  dev_setup.md
docs/aprs_mvp_docs/: README.md  payload_contracts.md
docs/aprs_mvp_docs/agent_bootstrap/: README.md  architecture_contracts.md  audit.md  ble_protocol_quickref.md  device_loop.md  gate_pass_matrix.md  handoff_prompt_template.md  implementation_steps_mvp.md  qa_gates.md  step_source_map.md
docs/aprs_mvp_docs/docs/: 01_product_brief.md  02_mvp_scope.md  03_system_architecture.md  05_ble_gatt_spec.md  07_audio_i2s_codec_notes.md  10_open_questions.md  14_pairing_security_policy.md  16_kiss_over_ble_spec.md  17_mvp_gap_analysis.md  18_ios_app_architecture.md  19_ble_integration_reference.md
docs/aprs_mvp_docs/hardware/: interfaces.md
docs/hardware/: README.md
docs/hardware/components/: CAD_ASSET_STATUS.md  README.md  fetch_pdfs.ps1  sources_manifest.csv
firmware/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.esp32s3
firmware/build_esp32s3/: app-flash_args  flash_project_args  flasher_args.json  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json
firmware/build_esp32s3/bootloader/: .bin_timestamp  compile_commands.json  project_description.json
firmware/build_esp32s3/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
firmware/build_esp32s3/gdbinit/: gdbinit  symbols
firmware/build_esp32s3/log/: idf_py_stderr_output_5063  idf_py_stderr_output_6028  idf_py_stdout_output_5063  idf_py_stdout_output_6028
firmware/build_feather_s3/: .bin_timestamp  flasher_args.json  ldgen_libraries  project_description.json  x509_crt_bundle.S
firmware/build_feather_s3/bootloader/: .bin_timestamp  compile_commands.json  kconfigs.in  project_description.json
firmware/build_feather_s3/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
firmware/build_feather_s3/gdbinit/: gdbinit  symbols
firmware/build_feather_s3/log/: idf_py_stderr_output_12341  idf_py_stderr_output_12723  idf_py_stderr_output_20486  idf_py_stderr_output_21358  idf_py_stderr_output_22380  idf_py_stderr_output_22629  idf_py_stderr_output_30068  idf_py_stderr_output_32719  idf_py_stderr_output_35410  idf_py_stderr_output_43857  idf_py_stderr_output_62941  idf_py_stdout_output_12432  idf_py_stdout_output_12723  idf_py_stdout_output_20486  idf_py_stdout_output_21358  idf_py_stdout_output_22380  idf_py_stdout_output_22629  idf_py_stdout_output_30068  idf_py_stdout_output_30896  idf_py_stdout_output_31906  idf_py_stdout_output_32719  idf_py_stdout_output_33551  idf_py_stdout_output_34351  idf_py_stdout_output_35159  idf_py_stdout_output_35410  idf_py_stdout_output_42952  idf_py_stdout_output_43857  (+21 more)
firmware/build_host/: DartConfiguration.tcl  pakt_tests
firmware/main/: CMakeLists.txt  NvsStorage.h  Sa818UartTransport.h  bench_profile_config.h  bench_profile_current.h  bench_profile_quiet_codec_capture.h  main.cpp
firmware/main/audio_bench_test/: audio_bench_test.cpp  audio_bench_test.h
firmware/main/sa818_bench_test/: sa818_bench_test.cpp  sa818_bench_test.h
firmware/test_host/: CMakeLists.txt  golden_payloads.h  test_afsk_modem.cpp  test_aprs.cpp  test_ax25.cpp  test_ble_chunker.cpp  test_capability.cpp  test_config_store.cpp  test_hal_mocks.cpp  test_kiss_framer.cpp  test_main.cpp  test_nmea_parser.cpp  test_payload_validator.cpp  test_ptt_watchdog.cpp  test_sa818.cpp  test_telemetry.cpp  test_tx_integration.cpp  test_tx_scheduler.cpp
handoff/agent_integration_package/: 01_onboarding_brief.md  02_native_ble_protocol.md  03_current_software_and_app_status.md  04_maintenance_and_source_map.md  README.md
hardware/: component_selection_rationale.md  pcb_component_list.md  pcb_wiring_handoff.md  prototype_breakout_wiring_plan.md  prototyping_wiring.md
(+254 files in other folders)
